# pythonweb1.1-hw-02

virtual_assistant/: pyproject.toml
virtual_assistant/virtual_assistant/: Dockerfile  base_cls.py  functions.py  items.py  main.py  requirements.txt
