[tool.poetry]
name = "virtual-assistant"
version = "0.1.0"
description = "console virtual assistant for AddressBook, NoteBook"
authors = ["ViktorTil <tilnyakviktor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
